retains user state on link creation

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,7 +6,7 @@
     </div>
     <div>
       <label for="password">Password:</label>
-      <input id="password" type="password" name="password">
+      <input id="password" class="message" type="password" name="password">
     </div>
     <div>
       <input type="submit" value="Login">
